--- a/src/test/resources/test-deployment.yaml
+++ b/src/test/resources/test-deployment.yaml
@@ -118,7 +118,6 @@ spec:
                 secretKeyRef:
                   name: keycloak-postgresql
                   key: database-name
-          resources: {}
           livenessProbe:
             exec:
               command:
@@ -149,6 +148,13 @@ spec:
               mountPath: "/var/lib/postgresql"
           securityContext:
             privileged: false
+          resources:
+            requests:
+              memory: "100Mi"
+              cpu: "200m"
+            limits:
+              memory: 4Gi
+              cpu: "4"
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
@@ -253,6 +259,13 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 6
+          resources:
+            requests:
+              memory: "100Mi"
+              cpu: "200m"
+            limits:
+              memory: 4Gi
+              cpu: "4"
 ---
 apiVersion: v1
 data:
