--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -23,19 +23,18 @@ jobs:
         id: getMinikubeIp
         run: echo "::set-output name=value::$(minikube ip)"
         shell: bash
-#      - name: Build Pathfinder image and push it to the minikube docker host
-#        run: |
-#          cd ${{github.workspace}}
-#          ./mvnw -U -B package -DskipTests -Pnative \
-#            -Dquarkus.container-image.push=false \
-#           -Dquarkus.container-image.build=true \
-#            -Dquarkus.container-image.group=${{ github.repository_owner }} \
-#            -Dquarkus.container-image.additional-tags=latest-jar \
-#            -Dquarkus.container-image.tag=0.0.1-SNAPSHOT-native \
-#            -Dquarkus.container-image.registry=quay.io \
-#            -Dquarkus.native.container-build=true
-#          minikube cache add quay.io/konveyor/tackle-pathfinder:0.0.1-SNAPSHOT-native
-
+      - name: Build Pathfinder image and push it to the minikube docker host
+        run: |
+          cd ${{github.workspace}}
+          ./mvnw -U -B package -DskipTests -Pnative \
+            -Dquarkus.container-image.push=false \
+           -Dquarkus.container-image.build=true \
+            -Dquarkus.container-image.group=${{ github.repository_owner }} \
+            -Dquarkus.container-image.additional-tags=latest-jar \
+            -Dquarkus.container-image.tag=0.0.1-SNAPSHOT-native \
+            -Dquarkus.container-image.registry=quay.io \
+            -Dquarkus.native.container-build=true
+          minikube cache add quay.io/konveyor/tackle-pathfinder:0.0.1-SNAPSHOT-native
       - name: Check during max 2 minutes to allow Minikube ingress to be ready
         timeout-minutes: 2
         run: |
