check to api load debug for image
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/test/resources/test-deployment.yaml
+++ b/src/test/resources/test-deployment.yaml
@@ -2019,3 +2019,10 @@ spec:
                 name: keycloak
                 port:
                   number: 8080
+          - path: /api
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: keycloak
+                port:
+                  number: 8080
