--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -23,20 +23,27 @@ jobs:
         id: getMinikubeIp
         run: echo "::set-output name=value::$(minikube ip)"
         shell: bash
-      - name: Build Pathfinder image and push it to the minikube docker host
+      - name: Pulling image for test
         run: |
-          set -x
-          cd ${{github.workspace}}
-          ./mvnw -U -B package -DskipTests -Pnative \
-            -Dquarkus.container-image.push=false \
-            -Dquarkus.container-image.build=true \
-            -Dquarkus.container-image.group=${{ github.repository_owner }} \
-            -Dquarkus.container-image.additional-tags=latest-jar \
-            -Dquarkus.container-image.tag=0.0.1-SNAPSHOT-native \
-            -Dquarkus.container-image.registry=quay.io \
-            -Dquarkus.native.container-build=true
+          docker pull quay.io/jonathanvila/tackle-pathfinder:0.0.1-SNAPSHOT-native
+          docker tag quay.io/jonathanvila/tackle-pathfinder quay.io/konveyor/tackle-pathfinder
           minikube cache add quay.io/${{ github.repository_owner }}/tackle-pathfinder:0.0.1-SNAPSHOT-native
           minikube cache list
+
+      #- name: Build Pathfinder image and push it to the minikube docker host
+      #  run: |
+      #    set -x
+      #    cd ${{github.workspace}}
+      #    ./mvnw -U -B package -DskipTests -Pnative \
+      #      -Dquarkus.container-image.push=false \
+      #      -Dquarkus.container-image.build=true \
+      #      -Dquarkus.container-image.group=${{ github.repository_owner }} \
+      #      -Dquarkus.container-image.additional-tags=latest-jar \
+      #      -Dquarkus.container-image.tag=0.0.1-SNAPSHOT-native \
+      #      -Dquarkus.container-image.registry=quay.io \
+      #      -Dquarkus.native.container-build=true
+      #    minikube cache add quay.io/${{ github.repository_owner }}/tackle-pathfinder:0.0.1-SNAPSHOT-native
+      #    minikube cache list
       - name: Check during max 2 minutes to allow Minikube ingress to be ready
         timeout-minutes: 2
         run: |
@@ -96,8 +103,9 @@ jobs:
         shell: bash
       - name: Microcks API load
         run: |
-          curl -X POST "https://microcks.${{steps.getMinikubeIp.outputs.value}}.nip.io/api/artifact/upload" -H "accept: text/plain" -H "Content-Type: multipart/form-data" \
-            -F "file=@src/main/resources/META-INF/openapi.json;type=application/json" -L -k
+          response=$(curl -X POST "http://microcks.${{steps.getMinikubeIp.outputs.value}}.nip.io/api/artifact/upload" -H "accept: text/plain" -H "Content-Type: multipart/form-data" \
+            -F "file=@src/main/resources/META-INF/openapi.json;type=application/json" -L -k)
+          test "$response"="tackle-pathfinder:0.0.2"
       - name: Get Keycloak Token
         id: getKeycloakToken
         run: |
@@ -111,7 +119,7 @@ jobs:
           apiNameAndVersion: 'tackle-pathfinder:0.0.2'
           testEndpoint: 'http://${{steps.getMinikubeIp.outputs.value}}/pathfinder'
           runner: OPEN_API_SCHEMA
-          microcksURL: "https://microcks.${{steps.getMinikubeIp.outputs.value}}.nip.io/api/"
+          microcksURL: "http://microcks.${{steps.getMinikubeIp.outputs.value}}.nip.io/api/"
           keycloakClientId:  microcks-serviceaccount
           keycloakClientSecret:  ab54d329-e435-41ae-a900-ec6b3fe15c54
           waitFor: '10sec'
