Added entities and flyway instructions
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,6 +56,8 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 %dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
 %dev.quarkus.log.level=FINE
 %dev.quarkus.http.port=8085
+%dev.quarkus.hibernate-orm.database.generation=none
+
 
 # -------- Extra profiles
 %local.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
