Refined the entities and DDL
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 #%test.quarkus.log.category."org.hibernate".level=trace
 
 # ------- DEV
-%dev.quarkus.flyway.migrate-at-start=true
+%dev.quarkus.flyway.migrate-at-start=false
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/pathfinder_db
 # bind-parameters (BasicBinder) is at TRACE so min-level must be configured properly
 %dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
@@ -56,7 +56,7 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 %dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
 %dev.quarkus.log.level=FINE
 %dev.quarkus.http.port=8085
-%dev.quarkus.hibernate-orm.database.generation=none
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
 
 
 # -------- Extra profiles
