--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -125,27 +125,13 @@ jobs:
           while [[ ! "$(kubectl rollout status deployment microcks-keycloak-postgresql -n microcks)" =~ "successfully" ]]; do
             sleep 15
           done
-      - name: Microcks execution
-        uses: ./.github/actions/microcks-test-action
-        with:
-          apiNameAndVersion: 'tackle-pathfinder:0.0.2'
-          testEndpoint: "http://${{steps.getMinikubeIp.outputs.value}}/pathfinder"
-          runner: OPEN_API_SCHEMA
-          microcksURL: "https://microcks.${{steps.getMinikubeIp.outputs.value}}.nip.io/api/"
-          keycloakClientId:  microcks-serviceaccount
-          keycloakClientSecret:  ab54d329-e435-41ae-a900-ec6b3fe15c54
-          waitFor: '10sec'
-          verbose: true
-          insecure: true
-          operationsHeaders: |
-            {
-              "globals": [
-                {
-                  "name": "Authorization",
-                  "values": "Bearer ${{steps.getKeycloakToken.outputs.value}} "
-                }
-              ]
-            }
+      - name: Microcks-cli test execution
+        run: |
+          curl -Lo microcks-cli https://github.com/microcks/microcks-cli/releases/download/0.3.0/microcks-cli-linux-amd64
+          ./microcks-cli test 'tackle-pathfinder:0.0.2' http://192.168.49.2/pathfinder OPEN_API_SCHEMA \
+            --microcksURL=https://microcks.192.168.49.2.nip.io/api/ --waitFor=10sec --secretName='' \
+            --keycloakClientId=microcks-serviceaccount --keycloakClientSecret=ab54d329-e435-41ae-a900-ec6b3fe15c54 \
+            --insecure --verbose --operationsHeaders='{\"globals\": [ { \"name\": \"Authorization\", \"values\": \"Bearer ${{steps.getKeycloakToken.outputs.value}} \" } ] }'
 
 
 
