--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -1,8 +1,8 @@
 name: Tackle Pathfinder CI PR Minikube Test
 
-on:
-  pull_request:
-    branches: [ main ]
+on: [push]
+  #pull_request:
+  #  branches: [ main ]
 
 jobs:
   microcks-api-validation:
