--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,7 @@
                 <jacoco-agent.destfile>${project.build.directory}/jacoco.exec</jacoco-agent.destfile>
                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                 <maven.home>${maven.home}</maven.home>
+                <keycloak.version>${keycloak.version}</keycloak.version>
             </systemPropertyVariables>
         </configuration>
     </plugin>
