--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - tackle-89-microcks-github-action
+  #pull_request:
+  #  branches: [ main ]
 
 jobs:
   microcks-api-validation:
