Debugging OpenId configuration

--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -131,8 +131,10 @@ jobs:
       - name: Microcks-cli test execution
         run: |
           curl -Lo microcks-cli https://github.com/microcks/microcks-cli/releases/download/0.3.0/microcks-cli-linux-amd64 && chmod +x microcks-cli
-          ./microcks-cli test 'tackle-pathfinder:0.0.2' http://192.168.49.2/pathfinder OPEN_API_SCHEMA \
-            --microcksURL=https://microcks.192.168.49.2.nip.io/api/ --waitFor=10sec --secretName='' \
+          curl https://microcks.${{steps.getMinikubeIp.outputs.value}}.nip.io/api/keycloak/config
+          curl https://keycloak.${{steps.getMinikubeIp.outputs.value}}.nip.io//auth/realms/microcks/.well-known/openid-configuration
+          ./microcks-cli test 'tackle-pathfinder:0.0.2' http://${{steps.getMinikubeIp.outputs.value}}/pathfinder OPEN_API_SCHEMA \
+            --microcksURL=https://microcks.${{steps.getMinikubeIp.outputs.value}}.nip.io/api/ --waitFor=10sec --secretName='' \
             --keycloakClientId=microcks-serviceaccount --keycloakClientSecret=ab54d329-e435-41ae-a900-ec6b3fe15c54 \
             --insecure --verbose --operationsHeaders='{\"globals\": [ { \"name\": \"Authorization\", \"values\": \"Bearer ${{steps.getKeycloakToken.outputs.value}} \" } ] }'
 
